syntax = "proto3";

option java_package = "org.superbiz.game.proto";
option java_outer_classname = "Msg";

message Message {
    oneof msg {
        PlayerStartRequest playerStartRequest = 1;
        PlayerStartResponse playerStartResponse = 2;

        PlayerUpdateRequest playerUpdateRequest = 3;
        PlayerUpdateResponse playerUpdateResponse = 4;

        Resize resize = 5;
        PeriodicVehiclesUpdate periodicVehicleUpdate = 6;

        ClientDisconnect clientDisconnect = 9;
    }
}

message PlayerStartRequest {
    string name = 1;
    string vehicleType = 2;
    string vehicleDesign = 3;
    int64 initiated = 4;
}

message PlayerStartResponse {
    TimeInfo timeInfo = 1;
    int32 worldWidth = 2;
    int32 worldHeight = 3;
    int32 sectorWidth = 4;
    int32 sectorHeight = 5;
    repeated SectorData sectorData = 6;
    float birthLocationX = 7;
    float birthLocationY = 8;
    float birthOrientation = 9;
    float baseSpeed = 10;
}

message SectorData {
    int32 x = 1;
    int32 y = 2;
    enum RoadType {
        NONE = 0;
        SINGLE = 1;
        DOUBLE = 2;
        TRIPLE = 3;
    }
    RoadType north = 3;
    RoadType east = 4;
    RoadType south = 5;
    RoadType west = 6;
}


message PlayerUpdateRequest {
    float orientationRequested = 1;
    float speedMultiplier = 2;
    int64 initiated = 3;
}

message PlayerUpdateResponse {
    TimeInfo timeInfo = 1;
//    float x = 2;
//    float y = 3;
    //float orientationRequested = 5;
    //repeated VehiclePart parts = 6;
    VehicleData vehicleData = 2;
}

//message Dot {
//    float x = 1;
//    float y = 2;
//    int32 color = 3;
//    int32 size = 4;
//}

//message DotsUpdate {
//    repeated Dot dots = 1;
//}

message PeriodicVehiclesUpdate {
    uint64 serverTimestamp = 1;
    repeated VehicleData vehicles = 2;
}

message VehicleData {
    uint64 lastProcessedOnServer = 1;
    repeated VehiclePart vehicleParts = 2;
    float orientationRequested = 3;
    float orientation = 4;
    float speedMultiplier = 5;
}

message VehiclePart {
    float x = 1;
    float y = 2;
    float rotation = 3;
    PartType partType = 4;

    // following needed only once
    string partId = 11;
    int32 pivotX = 12;
    int32 pivotY = 13;

    enum PartType {
        HEAD = 0;
        TRAILER = 1;
        FRONT_WHEEL = 2;
    }
}

message TimeInfo {
    int64 initiated = 1;
    int64 processing = 2;
}

message Resize {
    int32 width = 1;
    int32 height = 2;
}

message ClientDisconnect {
    string id = 1;
    string name = 2;
}